# aws-genai-pro-labs

./: .gitignore  README.md
.github/workflows/: ci.yml
module-01/: README.md  hello_bedrock.py  lab.md  pyproject.toml  setup.py  teardown.py
module-01/iam/: course-policy.json  course-policy.md
module-01/tests/: smoke_test.py
module-02/: README.md  lab.md  pyproject.toml  setup.py  teardown.py
module-02/data/tickets/: ticket-002.json  ticket-004.json
module-02/prompts/: triage_prompt.md
module-02/relay/: __init__.py  triage.py
module-02/tests/: smoke_test.py
module-03/: README.md  lab.md  pyproject.toml  setup.py  teardown.py
module-03/data/tickets/: expected.json  ticket-007.json
module-03/relay/: config.py  llm.py
module-03/tests/: smoke_test.py
module-04/: .gitignore  README.md  compare_chunking.py  lab.md  pyproject.toml  setup.py  teardown.py
module-04/data/tickets/: ticket-003.json
module-04/ingest/: __init__.py  upsert.py
module-04/relay/: __init__.py  config.py  models.py
module-04/tests/: smoke_test.py
module-05/: .gitignore  README.md  compare_chunking.py  lab.md  pyproject.toml  setup.py  teardown.py
module-05/data/docs/: billing-plans.md  technical-webhooks.md
module-05/data/tickets/: expected.json
module-05/relay/: __init__.py  config.py  kb.py  models.py
module-05/tests/: smoke_test.py
module-06/: README.md  lab.md  pyproject.toml  run_prompt_tests.py  setup.py  teardown.py
module-06/data/: kb_questions.json
module-06/data/docs/: orders-export.md
module-06/data/raw/: invalid_oversized.txt
module-06/relay/: __init__.py  config.py  intake.py  kb.py  models.py
module-06/tests/: smoke_test.py
module-07/: .gitignore  README.md  lab.md  pyproject.toml  setup.py  teardown.py
module-07/data/docs/: account-password-reset.md
module-07/data/raw/: chat_shipping.txt
module-07/data/tickets/: ticket-005.json
module-07/ingest/: embed.py
module-07/relay/: __init__.py  agent.py  config.py  intake.py  llm.py  models.py
module-07/tests/: smoke_test.py
module-08/: .gitignore  README.md  lab.md  pyproject.toml  setup.py  teardown.py
module-08/data/raw/: invalid_empty.txt
module-08/data/tickets/: ticket-006.json  ticket-008.json  ticket-009.json
module-08/relay/: __init__.py  agent.py  config.py  tools.py
module-08/tests/: smoke_test.py
module-09/: .gitignore  README.md  lab.md  pyproject.toml  setup.py  teardown.py
module-09/agentcore/: README.md
module-09/ingest/: embed.py  run.py
module-09/relay/: __init__.py  config.py  llm.py
module-09/tests/: smoke_test.py
module-10/: .gitignore  README.md  compare_retrieval.py  lab.md  pyproject.toml  run_attacks.py  setup.py  teardown.py
module-10/docs/: model-card.md
module-10/mcp_server/: __init__.py  store.py
module-10/relay/: __init__.py  config.py
module-10/tests/: smoke_test.py
module-11/: .gitignore  README.md  audit_report.py  freshness_test.py  lab.md  pyproject.toml  setup.py  teardown.py
module-11/cdk/: README.md  cdk.json
module-11/cdk/relay_cdk/: api_stack.py  pipeline_stack.py
module-11/data/docs/: shipping-tracking.md
module-11/data/raw/: email_account_help.txt
module-11/iam/policies/: agent.json
module-11/mcp_server/: app.py  server.py
module-11/pipeline/: README.md
module-11/relay/: __init__.py  config.py  llm.py  run.py  triage.py
module-11/relay/api/: __init__.py  approve_handler.py  get_handler.py  worker_handler.py
module-11/tests/: smoke_test.py
module-12/: README.md  demo_llm.py  lab.md  pyproject.toml  setup.py  teardown.py
module-12/agentcore/: agentcore.yaml
module-12/cdk/: app.py  openapi.json
module-12/cdk/relay_cdk/: __init__.py
module-12/data/docs/: technical-error-codes.md
module-12/relay/: __init__.py  config.py  intake.py  kb.py  llm.py  models.py
module-12/relay/api/: post_handler.py
module-12/tests/: smoke_test.py
module-13/: .gitignore  README.md  cost_report.py  lab.md  pyproject.toml  setup.py  teardown.py
module-13/cdk/: openapi.json
module-13/cdk/relay_cdk/: __init__.py  api_stack.py
module-13/data/: attacks.json  orders.json
module-13/data/eval_fixtures/: baseline_fixture.json
module-13/data/raw/: email_billing_error.txt
module-13/data/tickets/: pii_ticket.json
module-13/docs/: relay-design.md
module-13/evals/: judge.py  run_evals.py
module-13/mcp_server/: __main__.py
module-13/pipeline/: README.md  buildspec.yml  eval_buildspec.yml
module-13/relay/: __init__.py  approve.py  config.py  safety.py
module-13/relay/api/: feedback_handler.py  worker_handler.py
module-13/tests/: smoke_test.py
module-14/: README.md  cdk.json  cost_report.py  lab.md  pyproject.toml  setup.py
module-14/cdk/: app.py
module-14/cdk/relay_cdk/: pipeline_stack.py
module-14/data/: questions.json
module-14/docs/: runbook.md
module-14/evals/: golden_set.json  golden_set.py
module-14/ingest/: chunkers.py
module-14/observability/: inject_fault.py  metrics.py
module-14/relay/: agent.py  cache.py  llm.py  models.py  pii.py
module-14/tests/: smoke_test.py
module-15/: .gitignore  README.md  demo_capstone.py  lab.md  pyproject.toml  setup.py  teardown.py
module-15/cdk/: README.md
module-15/data/: attacks.json  degraded_prompt.md  fairness_pairs.json
module-15/data/eval_fixtures/: build_fixtures.py  degraded_fixture.json  fairness_fixture.json
module-15/data/tickets/: sample.json  ticket-001.json
module-15/docs/: genai-lens-review.md
module-15/evals/: __init__.py  run_evals.py
module-15/evals/results/: run-baseline.json
module-15/iam/policies/: intake.json
module-15/mcp_server/: store.py
module-15/observability/: __init__.py  setup_observability.py
module-15/observability/queries/: cost_per_ticket.logsinsights  grounding_by_citation.logsinsights  invocations_tokens_latency.logsinsights  largest_prompts.logsinsights
module-15/pipeline/: smoke_buildspec.yml  smoke_test_live.py
module-15/relay/: config.py  kb.py  specialists.py
module-15/relay/api/: common.py  post_handler.py  worker_handler.py
module-15/tests/: smoke_test.py
(+7 files in other folders)
