[project]
name = "aws-genai-pro-labs-module-01"
version = "0.1.0"
description = "Module 1 of AWS GenAI Pro Mastery — your first Amazon Bedrock Converse call."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3~=1.43",
]

[dependency-groups]
dev = [
    "moto~=5.0",
    "pytest~=8.0",
]

[tool.pytest.ini_options]
# 'live' marks the one test that makes a REAL Bedrock call (costs a fraction of
# a cent). It is skipped unless RELAY_LIVE_TESTS=1 — see tests/smoke_test.py.
markers = [
    "live: makes a real AWS Bedrock call (needs creds + RELAY_LIVE_TESTS=1)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat module-01/ layout: ship the lab scripts, not a package tree.
include = ["hello_bedrock.py", "setup.py", "teardown.py"]
